signature CT: Update for Java 8
Java 8 supports methods in interfaces. Including synthetic methods. The
signature test now ignores synthetic methods. The class parsing also
understands the new constant pool entry types.